* Fixed visibility of theme switch at user navigation of admin views

--- a/src/view/Components/Layout/UserNavigation/UserNavigation.scss
+++ b/src/view/Components/Layout/UserNavigation/UserNavigation.scss
@@ -37,7 +37,7 @@
 
   .field.horizontal-field,
   .switch.switch-field {
-    padding: 0 0.75rem;
+    padding: 0 1rem;
   }
 }
 
